# Outlocal

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  HANDOFF.md  LICENSE  OUTLOCAL PRD.md  OUTLOCAL-frontend-PRD.md  Opensource_research_outlocalP1.md  README.md  SETUP.md  docker-compose.yml  feature_list.json  init.sh  omega-autonomous-pipeline-end2end.md  pyproject.toml  qa_test_suite.py  requirements.txt
data/: active_strategy.md  daily_email_plan.json  daily_signals.json  daily_strategy.md  followup_queue.json  linkedin_connection_notes.json  linkedin_coordination.json  linkedin_search_plan.json  new_replies.json  reply_classifications.json  value_delivery_queue.json
data/weekly_reports/: week_2026-04-05.md  week_2026-04-05_summary.json  week_2026-05-03.md  week_2026-05-03_summary.json  week_2026-05-17.md  week_2026-05-17_summary.json  week_2026-05-24.md  week_2026-05-24_summary.json  week_2026-05-31.md  week_2026-05-31_summary.json
docs/architecture/: current.md
docs/plans/: feature-F001-plan.md
frontend/: package-lock.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: CampaignCard.tsx  (+3 more)
src/outlocal/: __init__.py
tests/: conftest.py  test_ab_testing.py  test_ai_engine.py  test_analytics.py  test_api.py  test_classifier.py  test_compliance.py  test_config.py  test_crm.py  test_database.py  test_domain_auth.py  test_email_finder.py  test_email_sender.py  test_email_templates.py  test_followup.py  test_models.py  test_pipeline.py  test_scheduler.py  test_scoring.py  test_scraper.py  test_smoke.py  test_website_crawler.py
(+26 files in other folders)
